--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
   <header class="header">
     <nav class="navbar container">
       <a class="navbar-logo" href="#!">Iskander</a>
+      <div class="navbar-hamburger">
+        <button class="navbar-menu__btn">
+          <img src="img/hamburger-menu.svg" alt="">          
+        </button>
       <ul class="navbar-list">
         <li><a class="navbar-list-link" href="">Work</a></li>
         <li><a class="navbar-list-link" href="">About</a></li>
         <li><a class="navbar-list-link" href="">Contact</a></li>
       </ul>
+    </div>
     </nav>
     <div class="header-me container">
       <h1>I’m Iskander — a junior web-programmer</h1> 
@@ -30,43 +35,43 @@
       <div class="card1 card">
        <a target="_blank" href="web-sites/Cinema/index.html"> <img src="img/cinema1.png" alt=""></a>
         <div>
-          <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <h4>Cinema site</h4>
+          <p>Product dev</p>
         </div>
       </div>
       <div class="card2 card">
         <a target="_blank" href="web-sites/Oku/index.html"> <img src="img/oku.png" alt=""></a>
         <div>
-          <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <h4>Music Oku</h4>
+          <p>Product dev</p>
         </div>
       </div>
       <div class="card2 card">
         <a target="_blank" href="web-sites/Bank/index.html"> <img src="img/bank.png" alt=""> </a>
         <div>
-          <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <h4>Bank web-site</h4>
+          <p>Product dev</p>
         </div>
       </div>
       <div class="card2 card">
         <a target="_blank" href=""> <img src="img/IMAGE-1.png" alt=""></a>
         <div>
           <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <p>Product dev</p>
         </div>
       </div>
       <div class="card1 card">
         <a target="_blank" href=""> <img src="img/IMAGE-5.png" alt=""></a>
         <div>
           <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <p>Product dev</p>
         </div>
       </div>
       <div class="card2 card card-last">
         <a target="_blank" href=""> <img src="img/IMAGE-2.png" alt=""></a>
         <div>
           <h4>Rule ratio</h4>
-          <p>Product design</p>
+          <p>Product dev</p>
         </div>
       </div>
       
